--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -93,8 +93,22 @@
                                             <div class="row ms-1">
                                                 <h2>Descripción</h2>
                                                 <p>{{tarea.descripcion}}</p>
-
+                                                <h2 *ngIf="arrTareasProyecto[indice].prioridad.length > 1" class="mt-2">Compañeros tarea</h2>
+                                                    <div *ngIf="arrTareasProyecto[indice].prioridad.length > 1" class="mt-2 col-10">
+                                                       <div>
+                                                           <div *ngFor="let usuarioCompanero of arrTareasProyecto[indice].prioridad">
+                                                                <div *ngIf="usuario._id != usuarioCompanero.usuario">
+                                                                    <!--EJECUTAR METODO PARA OBTENER NOMBRE-->
+                                                                    <span><strong>{{usuarioCompanero.usuario}}</strong></span>
+                                                                </div>
+                                                              
+                                                           </div>   
+                                                       </div>
+                                                 
+                                                 
+                                                </div>
                                             </div>
+                                            
                                             <hr>
                                                 <div class="row ms-2">
     
@@ -106,8 +120,8 @@
                                                             </div>
                                                            
                                                         </div>
-                                                        
                                                     </div>
+                                                  
                                                 </div>
                                                 <div class="row-2 m-3">
                                                     <button type="button" class="btn btn-primary"[routerLink]="['/add-valor-tarea',tarea._id,proyecto._id]">Añadir importancia</button>
