--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -24,8 +24,8 @@
         <form #formPriorizarTareas="ngForm" (ngSubmit)="calcularPrioridad()">
             <div class="mt-3 ms-4 row">
                 <label for="inputLimite" class="col-sm-2 col-form-label">Limite de esfuerzo </label>
-                <div class="col-sm-2">
-                    <input id="limite" class="form-control" type="number" placeholder="[1 - 10]" required>
+                <div class="col-sm-3">
+                    <input id="limite" class="form-control" type="number" placeholder="Introduzca un esfuerzo" required>
                     
               </div>
               <div *ngIf="0 >= limiteEsfuerzo" class="col-4 mt-2">
