--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -50,6 +50,16 @@
 
                     </div>
                 </div>
+                <div class="row m-2">
+                    <div class="col-4">
+                        <label for="fechaInicio"><strong>Fecha inicio:</strong></label>
+                        {{proyecto.fechaInicio}}
+                    </div>
+                    <div class="col-4">
+                        <label for="fechaInicio"><strong>Fecha fin:</strong></label>
+                        {{proyecto.fechaFin}}
+                    </div>
+                </div>
                 <!--Fin de la información del proyecto-->
             </div>
             <!--Inicio de las tareas del proyecto-->
