Sprint 1 completado 100 seguro

--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -75,7 +75,7 @@
                             <button type="button " class="btn btn-danger ms-3 " (click)="deleteProyecto()">
                       Eliminar proyecto
                     </button>
-                            <button class="btn btn-success ms-3 " type="button " [routerLink]="['/editar-proyecto',proyecto._id]">
+                            <button class="btn btn-success ms-3 " type="button " [routerLink]="['/editar-proyecto',proyecto._id]" disabled>
                      Editar proyecto
                     </button>
                         </div>
