--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -82,7 +82,7 @@
                 <button type="button " class="btn btn-danger ms-5 mt-2 " (click) = "borrarRequisito()">
                     Terminar tarea
                      </button>
-                     <button type="button " class="btn btn-success ms-3 mt-2 " [routerLink]="[ '/editar-tarea', proyecto._id,requisito._id] " disabled>
+                     <button type="button " class="btn btn-success ms-3 mt-2 " [routerLink]="[ '/editar-tarea', proyecto._id,requisito._id] ">
                        Editar tarea 
                          </button>
       </div>
