--- a/NRP/src/app/components/proyecto/proyecto.component.css
+++ b/NRP/src/app/components/proyecto/proyecto.component.css
@@ -1,8 +1,10 @@
 
-#addTarea, #deleteTarea, #deleteUsuario,#addUsuario,#priorizarTarea {
+#addTarea, #deleteTarea, #deleteUsuario,#addUsuario,#priorizarTarea, .flecha {
   transition: all 300ms;
 }
 
-#addTarea:hover, #deleteTarea:hover, #deleteUsuario:hover,#addUsuario:hover,#priorizarTarea:hover {
+#addTarea:hover, #deleteTarea:hover, #deleteUsuario:hover,#addUsuario:hover,#priorizarTarea:hover,.flecha:hover {
   transform: scale(1.1);
 }
+
+
