--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -75,7 +75,7 @@
                             <button type="button " class="btn btn-danger ms-3 " (click)="deleteProyecto()">
                       Eliminar proyecto
                     </button>
-                            <button class="btn btn-success ms-3 " type="button " [routerLink]="['/editar-proyecto',proyecto._id]" disabled>
+                            <button class="btn btn-success ms-3 " type="button " [routerLink]="['/editar-proyecto',proyecto._id]">
                      Editar proyecto
                     </button>
                         </div>
@@ -226,7 +226,7 @@
                             <th scope="col">Esfuerzo</th>
                           </tr>
                         </thead>
-                        <tbody *ngFor="let tarea of proyecto.planificacion;let indice = index">
+                        <tbody *ngFor="let tarea of tareasDentroLimiteEsfuerzo;let indice = index">
                           <tr>
                             <th scope="row">{{indice + 1}}</th>
                             <td >{{tarea.requisito.nombre}}</td>
@@ -235,6 +235,44 @@
                             <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                             <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                             <td >{{tarea.coste}}</td>
+                            <td><img class = "flecha" src="./assets/flecha-abajo.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;" (click)="bajarTarea(indice)"></td>
+                          </tr>
+                        </tbody>
+                      </table>
+
+                      <h2 class="mt-4">
+                        Lista de tareas que no cumplen el limite de esfuerzo
+                    </h2>
+
+                      <div *ngIf= "tareasFueraLimiteEsfuerzo.length == 0" class="mt-4">
+                       
+                        <h2 style="text-align: center;" class="mt-3">
+                            Las tareas cumplen el límite de esfuerzo
+                        </h2>
+                    </div>
+
+                      <table *ngIf= "tareasFueraLimiteEsfuerzo.length != 0" class="table">
+                        
+                        <thead>
+                          <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Fecha inicio</th>
+                            <th scope="col">Fecha fin</th>
+                            <th scope="col">Importancia</th>
+                            <th scope="col">Esfuerzo</th>
+                          </tr>
+                        </thead>
+                        <tbody *ngFor="let tarea of tareasFueraLimiteEsfuerzo;let indice = index">
+                          <tr>
+                            <th scope="row">{{indice + 1}}</th>
+                            <td >{{tarea.requisito.nombre}}</td>
+                            <td >{{tarea.requisito.fechaInicio}}</td>
+                            <td >{{tarea.requisito.fechaFin}}</td>
+                            <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
+                            <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
+                            <td >{{tarea.coste}}</td>
+                            <td><img class = "flecha" src="./assets/flecha-arriba.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;"(click)="subirTarea(indice)"></td>
                           </tr>
                         </tbody>
                       </table>
