--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -202,19 +202,25 @@
                     </div>
                 </div>
 
-                <div *ngIf="proyecto.planificacion.length == 0" class="row mt-5 ms-3 text-center">
+                <div *ngIf="tareasDentroLimiteEsfuerzo.length == 0 && tareasFueraLimiteEsfuerzo.length == 0" class="row mt-5 ms-3 text-center">
                     <h1>No se han priorizado aún las tareas del proyecto</h1>
                     <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn">
                         <img id="priorizarTarea" src="./assets/time.png" alt="" width="60" height="60">
                        </button></a>
             </div>
 
-                <div *ngIf="proyecto.planificacion.length != 0"  class="row mt-2 m-3">
+                <div class="row mt-2 m-3">
                     <h2>Lista de tareas priorizadas <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn">
                         <img id="priorizarTarea" src="./assets/time.png" alt="" width="60" height="60">
                        </button></a></h2>
+                       <div *ngIf="tareasDentroLimiteEsfuerzo.length == 0 && tareasFueraLimiteEsfuerzo.length != 0" class="mt-4">
+                       
+                        <h2 style="text-align: center;" class="mt-3">
+                            No hay tareas priorizadas
+                        </h2>
+                    </div>
                    
-                    <table class="table">
+                    <table *ngIf="tareasDentroLimiteEsfuerzo.length != 0" class="table">
                         
                         <thead>
                           <tr>
