--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -202,7 +202,7 @@
                     </div>
                 </div>
 
-                <div *ngIf="tareasDentroLimiteEsfuerzo.length == 0 && tareasFueraLimiteEsfuerzo.length == 0" class="row mt-5 ms-3 text-center">
+                <div *ngIf="proyecto.planificacion.length == 0" class="row mt-5 ms-3 text-center">
                     <h1>No se han priorizado aún las tareas del proyecto</h1>
                     <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn">
                         <img id="priorizarTarea" src="./assets/time.png" alt="" width="60" height="60">
@@ -213,14 +213,10 @@
                     <h2>Lista de tareas priorizadas <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn">
                         <img id="priorizarTarea" src="./assets/time.png" alt="" width="60" height="60">
                        </button></a></h2>
-                       <div *ngIf="tareasDentroLimiteEsfuerzo.length == 0 && tareasFueraLimiteEsfuerzo.length != 0" class="mt-4">
-                       
-                        <h2 style="text-align: center;" class="mt-3">
-                            No hay tareas priorizadas
-                        </h2>
-                    </div>
+                    
                    
-                    <table *ngIf="tareasDentroLimiteEsfuerzo.length != 0" class="table">
+                   
+                    <table *ngIf="proyecto.planificacion.length != 0" class="table">
                         
                         <thead>
                           <tr>
@@ -232,7 +228,7 @@
                             <th scope="col">Esfuerzo</th>
                           </tr>
                         </thead>
-                        <tbody *ngFor="let tarea of tareasDentroLimiteEsfuerzo;let indice = index">
+                        <tbody *ngFor="let tarea of proyecto.planificacion;let indice = index">
                           <tr>
                             <th scope="row">{{indice + 1}}</th>
                             <td >{{tarea.requisito.nombre}}</td>
@@ -241,48 +237,12 @@
                             <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                             <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                             <td >{{tarea.coste}}</td>
-                            <td><img class = "flecha" src="./assets/flecha-abajo.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;" (click)="bajarTarea(indice)"></td>
+                          
                           </tr>
                         </tbody>
                       </table>
 
-                      <h2 class="mt-4">
-                        Lista de tareas que no cumplen el limite de esfuerzo
-                    </h2>
-
-                      <div *ngIf= "tareasFueraLimiteEsfuerzo.length == 0" class="mt-4">
-                       
-                        <h2 style="text-align: center;" class="mt-3">
-                            Las tareas cumplen el límite de esfuerzo
-                        </h2>
-                    </div>
-
-                      <table *ngIf= "tareasFueraLimiteEsfuerzo.length != 0" class="table">
-                        
-                        <thead>
-                          <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Fecha inicio</th>
-                            <th scope="col">Fecha fin</th>
-                            <th scope="col">Importancia</th>
-                            <th scope="col">Esfuerzo</th>
-                          </tr>
-                        </thead>
-                        <tbody *ngFor="let tarea of tareasFueraLimiteEsfuerzo;let indice = index">
-                          <tr>
-                            <th scope="row">{{indice + 1}}</th>
-                            <td >{{tarea.requisito.nombre}}</td>
-                            <td >{{tarea.requisito.fechaInicio}}</td>
-                            <td >{{tarea.requisito.fechaFin}}</td>
-                            <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
-                            <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
-                            <td >{{tarea.coste}}</td>
-                            <td><img class = "flecha" src="./assets/flecha-arriba.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;"(click)="subirTarea(indice)"></td>
-                          </tr>
-                        </tbody>
-                      </table>
-                  </div>
+                </div>
                 <!--Fin de la configuracion del proyecto-->
             </div>
         </div>
