--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -45,6 +45,13 @@
           <div>
             
           </div>
+          <div class="row justify-content-end mt-4 ">
+            <div class="col-3 ">
+                <button class="btn btn-success ms-3 " type="submit " (click)="updatePrioridad(proyecto.planificacion)">
+          Guardar
+        </button>
+            </div>
+        </div>
           <div *ngIf="proyecto.planificacion.length != 0" class="row mt-5 ms-3">
             <h1>Lista de tareas priorizadas</h1>
             <table class="table">
