--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -29,7 +29,7 @@
     </div>
         <div *ngIf="arrUsuariosResponsables.length!=0" class="row mt-3 ms-4 ">
             <div class="row ">
-                <div class="col-6 mb-3 ">
+                <div class="col-7 mb-3 ">
                     <h2>Responsables de la tarea</h2>
                     <table class="table">
                         <thead>
@@ -38,6 +38,7 @@
                             <th scope="col">Nombre</th>
                             <th scope="col">Peso del usuario en el proyecto</th>
                             <th scope="col">Importancia asignada a la tarea</th>
+                            <th scope="col">Cobertura</th>
                           </tr>
                         </thead>
                         <tbody *ngFor="let usuario of arrUsuariosResponsables;let indice = index">
@@ -47,6 +48,7 @@
                             <td class="text-center">{{pesosUsuarios[indice]}}</td>
                             <td *ngIf="requisito.prioridad[indice].valor == 0" class="text-center">Importancia sin asignar aún</td>
                             <td *ngIf="requisito.prioridad[indice].valor != 0" class="text-center">{{requisito.prioridad[indice].valor}}</td>
+                            <td class="text-center">...</td>
                           </tr>
                         </tbody>
                       </table>
