--- a/NRP/src/app/components/editar-tarea/editar-tarea.component.html
+++ b/NRP/src/app/components/editar-tarea/editar-tarea.component.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="row ">
-                <div class="col-6 mb-3 ">
+                <div class="col-7 mb-3 ">
                     <h2>Responsables de la tarea</h2>
                     <table class="table">
                         <thead>
@@ -41,6 +41,7 @@
                             <th scope="col">Nombre</th>
                             <th scope="col">Peso del usuario en el proyecto</th>
                             <th scope="col">Importancia asignada a la tarea</th>
+                            <th scope="col">Cobertura</th>
                           </tr>
                         </thead>
                         <tbody *ngFor="let usuario of arrUsuariosResponsables;let indice = index">
@@ -50,6 +51,7 @@
                             <td class="text-center">{{pesosUsuarios[indice]}}</td>
                             <td *ngIf="requisito.prioridad[indice].valor == 0" class="text-center">Importancia sin asignar aún</td>
                             <td *ngIf="requisito.prioridad[indice].valor != 0" class="text-center">{{requisito.prioridad[indice].valor}}</td>
+                            <td class="text-center">...</td>
                           </tr>
                         </tbody>
                       </table>
