--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -152,11 +152,11 @@
                                     </div>
                                     <div class = "col">
                                         <strong>Contribución: </strong>
-                                        <span>...</span>
+                                        <span>{{proyecto.contribuciones[indice].contribucion}}</span>
                                     </div>
                                     <div class = "col">
                                         <strong>Cobertura: </strong>
-                                        <span>...</span>
+                                        <span>{{proyecto.coberturas[indice].cobertura}}</span>
                                     </div>
                                     <div class ="col">
                                         <img id="deleteUsuario" src="./assets/borrar-usuario.png" alt="Borrar usuario" width="40" height="40" style="margin-left: 90%; cursor: pointer;" (click)="deleteUsuarios(indice)" />
@@ -212,7 +212,7 @@
 
                 <div *ngIf="proyecto.planificacion.length != 0" class="row mt-3 ms-3">
                     <h2>Productividad de las tareas del proyecto</h2>
-                    <p>La productividad es ...</p>
+                    <p>La productividad es {{proyecto.productividad}}</p>
             </div>
 
                 <div *ngIf="proyecto.planificacion.length == 0" class="row mt-5 ms-3 text-center">
