--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -21,20 +21,23 @@
                 <h1 class="text-black mt-3 ms-4"> {{proyecto.nombre}}</h1>
             </div>
             <div class="col-1">
-                <a [routerLink]="['/inicio',this.usuario._id]"><img class="mt-4" src="./assets/flecha-hacia-atras.png" alt="atras" width="50" height="50" /></a>
+                <a [routerLink]="['/inicio',this.usuario._id]"><img class="mt-4" src="./assets/flecha-hacia-atras.png"
+                        alt="atras" width="50" height="50" /></a>
             </div>
         </div>
 
         <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
-            Información
-          </button>
+                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+                    role="tab" aria-controls="home" aria-selected="true">
+                    Información
+                </button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
-            Tareas
-          </button>
+                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+                    role="tab" aria-controls="profile" aria-selected="false">
+                    Tareas
+                </button>
             </li>
         </ul>
 
@@ -45,7 +48,7 @@
                     <div class="col-9 m-3">
                         <h2>Descripción</h2>
                         <section class="text-justify">
-                         {{proyecto.descripcion}}
+                            {{proyecto.descripcion}}
                         </section>
 
                     </div>
@@ -71,77 +74,85 @@
                 <h2 class="m-3">Lista de tareas del proyecto asignadas para ti</h2>
                 <div class="row justify-content-end mt-3">
                     <div class="row">
-                        <div *ngIf = "arrTareasProyecto.length == 0" class="ms-3 mt-3 text-center">
+                        <div *ngIf="arrTareasProyecto.length == 0" class="ms-3 mt-3 text-center">
                             <h1>No tienes ninguna tarea asignada aún</h1>
-                          </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-9">
-                                <div *ngFor="let tarea of arrTareasProyecto; let indice = index;"class="col border mt-2 rounded">
-                                    <div class="row mt-3 ms-1">
-                                        
-                                        <div class="col-3">
-                                            <span style="font-size: 25px;">
-                                                {{tarea.nombre}} 
-                                            </span>  
-                                        </div> 
-                                        <div class="col-4 mt-2">
-                                            <span style="font-size: 16px;">
-                                               <strong>Fecha inicio:  </strong>{{tarea.fechaInicio}} 
-                                            </span>  
-                                        </div> 
-                                        <div class="col-5 mt-2">
-                                            <span style="font-size: 16px;">
-                                                <strong>Fecha fin: </strong> {{tarea.fechaFin}} 
-                                            </span>  
-                                        </div> 
-                                                  
+                            <div *ngFor="let tarea of arrTareasProyecto; let indice = index;"
+                                class="col border mt-2 rounded">
+                                <div class="row mt-3 ms-1">
+
+                                    <div class="col-3">
+                                        <span style="font-size: 25px;">
+                                            {{tarea.nombre}}
+                                        </span>
                                     </div>
-                                    <hr>
-                                    
-                                        
-                                            <div class="row ms-1">
-                                                <h2>Descripción</h2>
-                                                <p>{{tarea.descripcion}}</p>
-                                                <h2 *ngIf="arrTareasProyecto[indice].prioridad.length > 1" class="mt-2">Compañeros tarea</h2>
-                                                    <div *ngIf="arrTareasProyecto[indice].prioridad.length > 1" class="mt-2 col-10">
-                                                       <div>
-                                                           <div *ngFor="let usuarioCompanero of companeros">
-                                                                <div *ngIf="usuario._id != usuarioCompanero._id">
-                                                                    <!--EJECUTAR METODO PARA OBTENER NOMBRE-->
-                                                                    <span><strong>{{usuarioCompanero.nombre}}</strong></span>
-                                                                </div>
-                                                              
-                                                           </div>   
-                                                       </div>
-                                                 
-                                                 
-                                                </div>
-                                            </div>
-                                            
-                                            <hr>
-                                                <div class="row ms-2">
-    
-                                                    <div class="col-5">
-                                                        <div *ngFor="let importanciaBucle of arrTareasProyecto[indice].prioridad">
-                                                            <div *ngIf="importanciaBucle.usuario == usuario._id" class="mt-3 col-10">
-                                                                <span *ngIf="importanciaBucle.valor!=0" class="">Importancia actual de la tarea = <strong>{{importanciaBucle.valor}}</strong></span>
-                                                                <span *ngIf="importanciaBucle.valor==0" class=""><strong>No se ha asignado importancia a la tarea</strong></span>
-                                                            </div>
-                                                           
+                                    <div class="col-4 mt-2">
+                                        <span style="font-size: 16px;">
+                                            <strong>Fecha inicio: </strong>{{tarea.fechaInicio}}
+                                        </span>
+                                    </div>
+                                    <div class="col-5 mt-2">
+                                        <span style="font-size: 16px;">
+                                            <strong>Fecha fin: </strong> {{tarea.fechaFin}}
+                                        </span>
+                                    </div>
+
+                                </div>
+                                <hr>
+                                <div class="row ms-1">
+                                    <h2>Descripción</h2>
+                                    <p>{{tarea.descripcion}}</p>
+
+                                    <div *ngIf="arrTareasProyecto[indice].prioridad.length > 1" class="mt-2 col-10">
+                                        <div>
+
+                                            <div *ngFor="let prioridad of arrTareasProyecto[indice].prioridad"
+                                                class="mt-2 col-10">
+                                                <div *ngFor="let user of usuarios">
+                                                    <div *ngIf="prioridad.usuario==user._id" class="mt-2 col-10">
+                                                        <div *ngIf="usuario._id!=user._id" class="mt-2 col-10">
+
+                                                            <span><strong>{{user.nombre}}</strong></span>
+
                                                         </div>
                                                     </div>
-                                                  
                                                 </div>
-                                                <div class="row-2 m-3">
-                                                    <button type="button" class="btn btn-primary"[routerLink]="['/add-valor-tarea',tarea._id,proyecto._id]">Añadir importancia</button>
-                                                </div>
-                                          
-                                              
-                                      
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+
+                                <hr>
+                                <div class="row ms-2">
+
+                                    <div class="col-5">
+                                        <div *ngFor="let importanciaBucle of arrTareasProyecto[indice].prioridad">
+                                            <div *ngIf="importanciaBucle.usuario == usuario._id" class="mt-3 col-10">
+                                                <span *ngIf="importanciaBucle.valor!=0" class="">Importancia actual
+                                                    de
+                                                    la tarea = <strong>{{importanciaBucle.valor}}</strong></span>
+                                                <span *ngIf="importanciaBucle.valor==0" class=""><strong>No se ha
+                                                        asignado importancia a la tarea</strong></span>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="row-2 m-3">
+                                    <button type="button" class="btn btn-primary"
+                                        [routerLink]="['/add-valor-tarea',tarea._id,proyecto._id]">Añadir
+                                        importancia</button>
+                                </div>
+
+
+
                             </div>
-                       
+                        </div>
+
                     </div>
                 </div>
             </div>
