PIS SPRINT 2 TERMINADO

--- a/NRP/src/app/components/crear-tarea/crear-tarea.component.html
+++ b/NRP/src/app/components/crear-tarea/crear-tarea.component.html
@@ -135,52 +135,16 @@
                     <button type="button " class="btn btn-danger ms-5 " [routerLink]="[ '/proyecto', proyecto._id] ">
               Cancelar
             </button>
-                    <button class="btn btn-success ms-3 " type="submit " [disabled]="!formCrearTarea.form.valid " data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    <button class="btn btn-success ms-3 " type="submit " [disabled]="!formCrearTarea.form.valid " (click)="crearRequisito()">
              Crear
             </button>
                 </div>
             </div>
 
-        <!-- Modal -->
-        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="true" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                 <div class="modal-content">
-                    <div class="modal-header">
-                         <h2 class="modal-title" id="staticBackdropLabel">Crear tarea</h2>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                     </div>
-                <div class="modal-body">
-                    <p>A continuación, ingrese los pesos aproximados que cree que le van a dar los usuarios a la tarea, 
-                        para calcular la productividad de la tarea que se va a crear. </p>
-                    <div class="list-group list-group-flush  scrollarea ">
-                        <div *ngFor="let usuario of arrUsuariosAdd; let indice = index" class="row m-3">
-                            <div class="col-10">
-                                <strong>{{usuario.nombre}} </strong>
-                                <label for="inputPassword" class="col-sm-10 col-form-label">Asigna un peso simulado al usuario</label>
-                                <div class="col-sm-5">
-                                    <input class="form-control" type="number" name="pesoSimulado" #pesoSimulado="ngModel" [(ngModel)] = "arrUsuariosAdd[indice].pesoSimulado" placeholder="[1 - 5]">
-                              </div>
-                              <div *ngIf="0>= arrUsuariosAdd[indice].pesoSimulado || arrUsuariosAdd[indice].pesoSimulado > 5"  class="col-sm-4 mt-2">
-                                <span style="color: red;">El peso del usuario tiene que ser entre 1 y 5</span>
-                              </div>
-                            </div>
-                        
-                        </div>
-                        <div >
-                            <button type="button" class="btn btn-primary row m-3" (click)="calcularProductividadRequisito()" >Calcular productividad</button>
-                        </div>
-                        <div *ngIf = "productividadTarea != 0" >
-                            <p>La productividad que supondrá la inclusión de esta tarea sería de {{productividadTarea}}</p>
-                        </div>
-                    </div>
-             </div>
-                <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="crearRequisito()">Crear</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
+                
+          
+     
         </form>
 
         <!--Fin del contenido de INICIO-->
