--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -29,7 +29,7 @@
     </div>
         <div *ngIf="arrUsuariosResponsables.length!=0" class="row mt-3 ms-4 ">
             <div class="row ">
-                <div class="col-7 mb-3 ">
+                <div class="col-8 mb-3 ">
                     <h2>Responsables de la tarea</h2>
                     <table class="table">
                         <thead>
@@ -48,7 +48,9 @@
                             <td class="text-center">{{pesosUsuarios[indice]}}</td>
                             <td *ngIf="requisito.prioridad[indice].valor == 0" class="text-center">Importancia sin asignar aún</td>
                             <td *ngIf="requisito.prioridad[indice].valor != 0" class="text-center">{{requisito.prioridad[indice].valor}}</td>
-                            <td class="text-center">{{contribucion[indice].contribucion}}</td>
+                            <td *ngIf = "contribucion[indice].contribucion == null"  class="text-center">---</td>
+                            <td *ngIf = "contribucion[indice].contribucion == 0"  class="text-center">No está dentro de la solución</td>
+                            <td *ngIf = "contribucion[indice].contribucion != 0" class="text-center">{{contribucion[indice].contribucion}}</td>
                           </tr>
                         </tbody>
                       </table>
