--- a/NRP/src/app/components/editar-tarea/editar-tarea.component.html
+++ b/NRP/src/app/components/editar-tarea/editar-tarea.component.html
@@ -51,7 +51,9 @@
                             <td class="text-center">{{pesosUsuarios[indice]}}</td>
                             <td *ngIf="requisito.prioridad[indice].valor == 0" class="text-center">Importancia sin asignar aún</td>
                             <td *ngIf="requisito.prioridad[indice].valor != 0" class="text-center">{{requisito.prioridad[indice].valor}}</td>
-                            <td class="text-center">...</td>
+                            <td *ngIf = "contribucion[indice].contribucion == null"  class="text-center">---</td>
+                            <td *ngIf = "contribucion[indice].contribucion == 0"  class="text-center">No está dentro de la solución</td>
+                            <td *ngIf = "contribucion[indice].contribucion != 0" class="text-center">{{contribucion[indice].contribucion}}</td>
                           </tr>
                         </tbody>
                       </table>
