--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -37,7 +37,9 @@
             </div>
            
           </form>
-
+          <div *ngIf="tareasValoradas == false && controlTareas == false" class="row mt-5 ms-3 text-center">
+            <h1>Para poder priorizar las tareas deben haber valorado todos los usuarios participantes del proyecto sus tareas asignadas</h1>
+    </div>
           <div *ngIf="tamanioListaTareas == 0" class="row mt-5 ms-3 text-center">
                   <h1>No hay tareas con esa limite de esfuerzo, por favor introduzca un limite de esfuerzo más alto</h1>
           </div>
@@ -102,7 +104,8 @@
                     <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                     <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                     <td >{{tarea.coste}}</td>
-                    <td >{{tarea.importancia/tarea.coste}}</td>
+                    <td *ngIf="tarea.productividad ==0">---</td>
+                    <td *ngIf="tarea.productividad !=0">{{tarea.productividad}}</td>
                     <td><img class = "flecha" src="./assets/flecha-abajo.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;" (click)="bajarTarea(indice)"></td>
                     <td><img class = "intercambio" src="./assets/intercambio.png" alt="Bajar tarea" width="45" height="45" style="cursor: pointer;"(click)="intercambiarTareas(tarea,indice,tarea,indice)">
                   </tr>
@@ -142,7 +145,8 @@
                     <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                     <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                     <td >{{tarea.coste}}</td>
-                    <td >{{tarea.importancia/tarea.coste}}</td>
+                    <td *ngIf="tarea.productividad ==0">---</td>
+                    <td *ngIf="tarea.productividad !=0">{{tarea.productividad}}</td>
                     <td><img class = "flecha" src="./assets/flecha-arriba.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;"(click)="subirTarea(indice)"></td>
                   </tr>
                 </tbody>
