--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -152,11 +152,15 @@
                                     </div>
                                     <div class = "col">
                                         <strong>Contribución: </strong>
-                                        <span>{{proyecto.contribuciones[indice].contribucion}}</span>
+                                        <span *ngIf="proyecto.contribuciones[indice].contribucion == null">---</span>
+                                        <span *ngIf="proyecto.contribuciones[indice].contribucion == 0">No está dentro de la solución</span>
+                                        <span *ngIf="proyecto.contribuciones[indice].contribucion != 0">{{proyecto.contribuciones[indice].contribucion}}</span>
                                     </div>
                                     <div class = "col">
                                         <strong>Cobertura: </strong>
-                                        <span>{{proyecto.coberturas[indice].cobertura}}</span>
+                                        <span *ngIf="proyecto.coberturas[indice].cobertura == null">---</span>
+                                        <span *ngIf="proyecto.coberturas[indice].cobertura == 0">No está dentro de la solución</span>
+                                        <span *ngIf="proyecto.coberturas[indice].cobertura != 0">{{proyecto.coberturas[indice].cobertura}}</span>
                                     </div>
                                     <div class ="col">
                                         <img id="deleteUsuario" src="./assets/borrar-usuario.png" alt="Borrar usuario" width="40" height="40" style="margin-left: 90%; cursor: pointer;" (click)="deleteUsuarios(indice)" />
@@ -251,7 +255,7 @@
                             <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                             <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                             <td >{{tarea.coste}}</td>
-                            <td >{{tarea.importancia/tarea.coste}}</td>
+                            <td >{{tarea.productividad}}</td>
                           
                           </tr>
                         </tbody>
