--- a/NRP/src/app/components/editar-tarea/editar-tarea.component.html
+++ b/NRP/src/app/components/editar-tarea/editar-tarea.component.html
@@ -37,11 +37,11 @@
                     <table class="table">
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Peso del usuario en el proyecto</th>
-                            <th scope="col">Importancia asignada a la tarea</th>
-                            <th scope="col">Cobertura</th>
+                            <th scope="col"class="text-center">#</th>
+                            <th scope="col"class="text-center">Nombre</th>
+                            <th scope="col"class="text-center">Peso del usuario en el proyecto</th>
+                            <th scope="col"class="text-center">Importancia asignada a la tarea</th>
+                            <th scope="col"class="text-center">Cobertura</th>
                           </tr>
                         </thead>
                         <tbody *ngFor="let usuario of arrUsuariosResponsables;let indice = index">
@@ -51,9 +51,9 @@
                             <td class="text-center">{{pesosUsuarios[indice]}}</td>
                             <td *ngIf="requisito.prioridad[indice].valor == 0" class="text-center">Importancia sin asignar aún</td>
                             <td *ngIf="requisito.prioridad[indice].valor != 0" class="text-center">{{requisito.prioridad[indice].valor}}</td>
-                            <td *ngIf = "contribucion[indice].contribucion == null"  class="text-center">---</td>
-                            <td *ngIf = "contribucion[indice].contribucion == 0"  class="text-center">No está dentro de la solución</td>
-                            <td *ngIf = "contribucion[indice].contribucion != 0" class="text-center">{{contribucion[indice].contribucion}}</td>
+                            <td *ngIf="tareasValoradas == false" class="text-center">---</td>
+                            <td *ngIf = "contribucion[indice].contribucion == 0 && tareasValoradas == true"  class="text-center">No está dentro de la solución</td>
+                            <td *ngIf = "contribucion[indice].contribucion != 0 && tareasValoradas == true" class="text-center">{{contribucion[indice].contribucion}}</td>
                           </tr>
                         </tbody>
                       </table>
