--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -86,26 +86,26 @@
             <table *ngIf="proyecto.planificacion.length != 0"  class=table>
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Fecha inicio</th>
-                    <th scope="col">Fecha fin</th>
-                    <th scope="col">Importancia</th>
-                    <th scope="col">Esfuerzo</th>
-                    <th scope="col">Productividad</th>
+                    <th scope="col" class="text-center" >#</th>
+                    <th scope="col" class="text-center">Nombre</th>
+                    <th scope="col" class="text-center">Fecha inicio</th>
+                    <th scope="col" class="text-center">Fecha fin</th>
+                    <th scope="col" class="text-center">Importancia</th>
+                    <th scope="col" class="text-center">Esfuerzo</th>
+                    <th scope="col" class="text-center">Productividad</th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let tarea of proyecto.planificacion;let indice = index">
                   <tr>
                     <th scope="row">{{indice + 1}}</th>
-                    <td>{{tarea.requisito.nombre}}</td>
-                    <td>{{tarea.requisito.fechaInicio}}</td>
-                    <td>{{tarea.requisito.fechaFin}}</td>
-                    <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
-                    <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
-                    <td >{{tarea.coste}}</td>
-                    <td *ngIf="tarea.productividad ==0">---</td>
-                    <td *ngIf="tarea.productividad !=0">{{tarea.productividad}}</td>
+                    <td class="text-center">{{tarea.requisito.nombre}}</td>
+                    <td class="text-center">{{tarea.requisito.fechaInicio}}</td>
+                    <td class="text-center">{{tarea.requisito.fechaFin}}</td>
+                    <td *ngIf= "tarea.importancia == 0" class="text-center">Sin importancia</td>
+                    <td  *ngIf= "tarea.importancia != 0" class="text-center">{{tarea.importancia}}</td>
+                    <td class="text-center">{{tarea.coste}}</td>
+                    <td *ngIf="tarea.productividad ==0" class="text-center">---</td>
+                    <td *ngIf="tarea.productividad !=0" class="text-center">{{tarea.productividad}}</td>
                     <td><img class = "flecha" src="./assets/flecha-abajo.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;" (click)="bajarTarea(indice)"></td>
                     <td><img class = "intercambio" src="./assets/intercambio.png" alt="Bajar tarea" width="45" height="45" style="cursor: pointer;"(click)="intercambiarTareas(tarea,indice,tarea,indice)">
                   </tr>
@@ -127,26 +127,26 @@
                 
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Fecha inicio</th>
-                    <th scope="col">Fecha fin</th>
-                    <th scope="col">Importancia</th>
-                    <th scope="col">Esfuerzo</th>
-                    <th scope="col">Productividad</th>
+                    <th scope="col" class="text-center" >#</th>
+                    <th scope="col" class="text-center">Nombre</th>
+                    <th scope="col" class="text-center">Fecha inicio</th>
+                    <th scope="col" class="text-center">Fecha fin</th>
+                    <th scope="col" class="text-center">Importancia</th>
+                    <th scope="col" class="text-center">Esfuerzo</th>
+                    <th scope="col" class="text-center">Productividad</th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let tarea of tareasFueraLimiteEsfuerzo;let indice = index">
                   <tr>
                     <th scope="row">{{indice + 1}}</th>
-                    <td >{{tarea.requisito.nombre}}</td>
-                    <td >{{tarea.requisito.fechaInicio}}</td>
-                    <td >{{tarea.requisito.fechaFin}}</td>
-                    <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
-                    <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
-                    <td >{{tarea.coste}}</td>
-                    <td *ngIf="tarea.productividad ==0">---</td>
-                    <td *ngIf="tarea.productividad !=0">{{tarea.productividad}}</td>
+                    <td class="text-center" >{{tarea.requisito.nombre}}</td>
+                    <td class="text-center">{{tarea.requisito.fechaInicio}}</td>
+                    <td class="text-center">{{tarea.requisito.fechaFin}}</td>
+                    <td *ngIf= "tarea.importancia == 0" class="text-center">Sin importancia</td>
+                    <td  *ngIf= "tarea.importancia != 0"class="text-center" >{{tarea.importancia}}</td>
+                    <td class="text-center">{{tarea.coste}}</td>
+                    <td *ngIf="tarea.productividad ==0" class="text-center">---</td>
+                    <td *ngIf="tarea.productividad !=0" class="text-center">{{tarea.productividad}}</td>
                     <td><img class = "flecha" src="./assets/flecha-arriba.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;"(click)="subirTarea(indice)"></td>
                   </tr>
                 </tbody>
