--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -152,15 +152,15 @@
                                     </div>
                                     <div class = "col">
                                         <strong>Contribución: </strong>
-                                        <span *ngIf="proyecto.contribuciones[indice].contribucion == null">---</span>
-                                        <span *ngIf="proyecto.contribuciones[indice].contribucion == 0">No está dentro de la solución</span>
-                                        <span *ngIf="proyecto.contribuciones[indice].contribucion != 0">{{proyecto.contribuciones[indice].contribucion}}</span>
+                                        <span *ngIf="proyecto.contribuciones[indice].contribucion == null || tareasValoradas == false"> --- </span>
+                                        <span *ngIf="proyecto.contribuciones[indice].contribucion == 0 && tareasValoradas == true">No está dentro de la solución</span>
+                                        <span *ngIf="proyecto.contribuciones[indice].contribucion != 0 && tareasValoradas == true">{{proyecto.contribuciones[indice].contribucion}}</span>
                                     </div>
                                     <div class = "col">
                                         <strong>Cobertura: </strong>
-                                        <span *ngIf="proyecto.coberturas[indice].cobertura == null">---</span>
-                                        <span *ngIf="proyecto.coberturas[indice].cobertura == 0">No está dentro de la solución</span>
-                                        <span *ngIf="proyecto.coberturas[indice].cobertura != 0">{{proyecto.coberturas[indice].cobertura}}</span>
+                                        <span *ngIf="proyecto.coberturas[indice].cobertura == null || tareasValoradas == false" > --- </span>
+                                        <span *ngIf="proyecto.coberturas[indice].cobertura == 0 && tareasValoradas == true">No está dentro de la solución</span>
+                                        <span *ngIf="proyecto.coberturas[indice].cobertura != 0 && tareasValoradas == true">{{proyecto.coberturas[indice].cobertura}}</span>
                                     </div>
                                     <div class ="col">
                                         <img id="deleteUsuario" src="./assets/borrar-usuario.png" alt="Borrar usuario" width="40" height="40" style="margin-left: 90%; cursor: pointer;" (click)="deleteUsuarios(indice)" />
@@ -237,25 +237,25 @@
                         
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Fecha inicio</th>
-                            <th scope="col">Fecha fin</th>
-                            <th scope="col">Importancia</th>
-                            <th scope="col">Esfuerzo</th>
-                            <th scope="col">Productividad</th>
+                            <th scope="col" class="text-center">#</th>
+                            <th scope="col" class="text-center">Nombre</th>
+                            <th scope="col" class="text-center">Fecha inicio</th>
+                            <th scope="col" class="text-center">Fecha fin</th>
+                            <th scope="col" class="text-center">Importancia</th>
+                            <th scope="col" class="text-center">Esfuerzo</th>
+                            <th scope="col" class="text-center">Productividad</th>
                           </tr>
                         </thead>
                         <tbody *ngFor="let tarea of proyecto.planificacion;let indice = index">
                           <tr>
                             <th scope="row">{{indice + 1}}</th>
-                            <td >{{tarea.requisito.nombre}}</td>
-                            <td >{{tarea.requisito.fechaInicio}}</td>
-                            <td >{{tarea.requisito.fechaFin}}</td>
-                            <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
-                            <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
-                            <td >{{tarea.coste}}</td>
-                            <td >{{tarea.productividad}}</td>
+                            <td class="text-center">{{tarea.requisito.nombre}}</td>
+                            <td class="text-center">{{tarea.requisito.fechaInicio}}</td>
+                            <td class="text-center">{{tarea.requisito.fechaFin}}</td>
+                            <td *ngIf= "tarea.importancia == 0" class="text-center">Sin importancia</td>
+                            <td  *ngIf= "tarea.importancia != 0" class="text-center" >{{tarea.importancia}}</td>
+                            <td class="text-center">{{tarea.coste}}</td>
+                            <td class="text-center">{{tarea.productividad}}</td>
                           
                           </tr>
                         </tbody>
